<resources>
    <!-- =================== STRINGS =================== -->
    <!-- App Name -->
    <string name="app_name">Paradiddles</string>
    <!-- Splash Screen -->
    <string name="splashScreen">Loading Screen</string>
    <!-- =================== Buttons =================== -->
    <string name="singlesButton">Singles</string>
    <string name="tripletsButton">Triplets</string>
    <string name="doublesButton">Doubles</string>
    <string name="flamsButton">Flams</string>
    <string name="dragsButton">Drags</string>
    <string name="rollsButton">Rolls</string>
    <!-- Swipe Layout File Image View -->
    <string name="swipeLayoutImageView">Swipe Layout Image View</string>
    <!--Activity Titles -->
    <string name="singlesActivityTitle">Singles Activity</string>
    <string name="doublesActivityTitle">Doubles Activity</string>
    <string name="dragsActivityTitle">Drags Activity</string>
    <string name="flamsActivityTitle">Flams Activity</string>
    <string name="rollsActivityTitle">Roll Activity</string>
    <string name="drawerActivityTitle">Drawer Activity</string>
    <string name="triplesActivityTitle">Triplets Activity</string>
    <string name="mainActivityTitle">Paradiddles!</string>
    <string name="settingsActivityTitle">Settings Activity</string>

    <!-- =================== NAVIGATION STRINGS ==================== -->
    <!-- Navigation Drawer Popups -->
    <string name="navigationDrawerOpen">Open navigation drawer</string>
    <string name="navigationDrawerClose">Close navigation drawer</string>
    <!--Navigation Drawer Items -->
    <string name="navDrawerHome">Home</string>
    <string name="navDrawerAccount">Account</string>
    <string name="navDrawerSettings">Settings</string>
    <string name="navDrawerTitle">Paradiddles</string>
    <string name="navDrawerEmail">lukewaugh12@gmail.com</string>

    <string name="appBarLayoutContent">This is the App bar</string>
    <string name="navBarContentDescription">The Navigation Drawer</string>
    <string name="navHeaderImageViewContentDescription">The App Logo</string>
    <string name="navHeaderDrawerTitleContentDescription">App Name: Paradiddles</string>
    <string name="navHeaderDrawerEmailContentDescription">Developer email: lukewaugh12@gmail.com</string>


    <!-- =================== CONTENT DESCRIPTIONS =================== -->
    <string name="swipeLayoutDescription">Swipe across for the next image</string>
    <string name="app_nameDescription">Title Paradiddles</string>
    <!-- Splash Screen -->
    <string name="splashScreenDescription">The App loading Screen</string>
    <!-- Buttons -->
    <string name="singlesButtonDescription">A button to go to the Singles Exercises</string>
    <string name="tripletsButtonDescription">A button to go to the Triplets Exercises</string>
    <string name="doublesButtonDescription">A button to go to the Doubles Exercises</string>
    <string name="flamsButtonDescription">A button to go to the Flams Exercises</string>
    <string name="dragsButtonDescription">A button to go to the Drags Exercises</string>
    <string name="rollsButtonDescription">A button to go to the Rolls Exercises</string>

    <!-- Swipe Layout File Image View -->
    <string name="swipeLayoutImageViewDescription">Swipe left For the next Image, or right for the previous</string>


    <!-- Navigation Drawer Popups -->
    <string name="navigation_drawer_openDescription">Open navigation drawer</string>
    <string name="navigation_drawer_closeDescription">Close navigation drawer</string>


    <string name="drawerListItemsContent">Drawer List Menu Items</string>


    <!-- Strings related to Register -->
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password </string>
    <string name="register">Register</string>
    <string name="agePrompt">Age</string>
    <string name="usernameHint">Username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <!-- Strings related to Login -->
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="signIn">Sign in</string>
    <string name="loginActivity">Login</string>



    <string name="appBarLayoutString">App Bar</string>
    <string name="loginToMainText">No Thanks, take me to the App!</string>
    <string name="loginToMainContentDescription">Take you to the main page of the app</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>


</resources>
