<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lukewaugh.paradiddles.MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <!-- Title
         ID paradiddlesLbl -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainActivityTitle"
        android:id="@+id/paradiddlesLbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:shadowColor="#000000"
        android:singleLine="false"
        android:textSize="20sp"
        android:clickable="false"
        android:contentDescription="@string/app_nameDescription"/>

    <!-- ID btnSingles -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singlesButton"
        android:id="@+id/btnSingles"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/paradiddlesLbl"
        android:layout_toLeftOf="@+id/paradiddlesLbl"
        android:layout_toStartOf="@+id/paradiddlesLbl"
        android:textColor="@color/colorPrimary"
        android:contentDescription="@string/singlesButtonDescription"/>

    <!-- ID btnTriplets -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tripletsButton"
        android:id="@+id/btnTriplets"
        android:layout_alignTop="@+id/btnSingles"
        android:layout_toRightOf="@+id/paradiddlesLbl"
        android:layout_toEndOf="@+id/paradiddlesLbl"
        android:textColor="@color/colorPrimary"
        android:contentDescription="@string/tripletsButton"/>

    <!-- ID btnDoubles -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doublesButton"
        android:id="@+id/btnDoubles"
        android:layout_alignTop="@+id/btnTriplets"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:contentDescription="@string/doublesButtonDescription"/>

    <!-- ID btnFlams -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flamsButton"
        android:id="@+id/btnFlams"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnSingles"
        android:layout_alignStart="@+id/btnSingles"
        android:textColor="@color/colorPrimary"
        android:contentDescription="@string/flamsButtonDescription"/>

    <!-- ID btnDrags -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dragsButton"
        android:id="@+id/btnDrags"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnDoubles"
        android:layout_alignStart="@+id/btnDoubles"
        android:textColor="@color/colorPrimary"
        android:contentDescription="@string/dragsButtonDescription"/>
    <!-- ID btnRolls -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollsButton"
        android:id="@+id/btnRolls"
        android:layout_alignTop="@+id/btnDrags"
        android:layout_alignLeft="@+id/btnTriplets"
        android:layout_alignStart="@+id/btnTriplets"
        android:textColor="@color/colorPrimary"
        android:contentDescription="@string/rollsButtonDescription"/>



</RelativeLayout>
